- SCIP supports constraint compression for problem copies; constraint compression denotes the immediate
  removal of fixed variables from constraint data at creation time to reduce memory requirements.
- changed value of parameter separating/clique/cliquedensity to 0.0 such that the separator always constructs a dense clique table
  which proved to be faster on the benchmarks MMM and stableset.

interface:
- new library methods SCIPenableConsCompression(), SCIPisConsCompressionEnabled(), SCIPcopyConsCompression(), SCIPcopyOrigConsCompression()
- new method SCIPcopyLargeNeighborhoodSearch() in heuristics.h that supports compressed copying and two kinds of problem copy: the MIP-relaxation or
  a 1-1 problem copy (by copying the constraints, and not the LP relaxation)
- new files heuristics.c/heuristics.h to collect methods that are frequently used by heuristics
- merged dive.c/pub_dive.h with heuristics.c/heuristics.h, removed dive.c/pub_dive.h
- new library methods SCIPcopyConsCompression(), SCIPcopyOrigConsCompression() that accept an array of variables that are immediately fixed in the copy.
  Alternatively, local instead of global bounds can be used for compression.
- spx2 is the new default LP solver interface
- new function SCIPsolveProbingRelax() to solve a relaxation within probing
- new function SCIPgetIntVarXor() to access integer variable of XOR constraints
- new function SCIPgetLastStrongbranchingLPSolstat() to query the LP statuses after strong branching on a variable
- next to the number of found solution, also the number of new best solutions is now printed for each heuristic
  (and relaxation solutions) in the statistics in the "Primal Heuristic" section.
- CONSINITLP callback now has a new parameter 'infeasible', which is a pointer to store whether infeasibility
  was detected while building the initial LP relaxation
- new function SCIPisDualSolAvailable() to query the dual solution availability
- submakefile for CrayXC systems added